--- a/templates/bucketList.html
+++ b/templates/bucketList.html
@@ -16,19 +16,14 @@
 <body>
     {%for i in range(0, c)%}
             <div class="card">
-                <div class="card-body">
-                    <a id="link" href=# target="_blank"><span>{{ results[i] }}</span></a>
+                <div class="card-body" id="bList">
+                    <a id="links" href={{bl[i]}} target="_blank"><span>{{ bl[i] }}</span></a>
                 </div>
             </div>
             
                 <button id="addBtn" type=button class="btn btn-outline-success">Add</button>
             
-            {%endfor%}
-    <div class="card">
-    <div class="card-body">
-	        <a id="link" href="#" target="_blank">Under construction</a>
-	</div>
-	</div>
+    {%endfor%}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     
