--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,17 @@
-body{
+html,body{
   padding-top: 30px;
+  margin:0;
+  padding:0;
   /*background-image: url('/static/img/bg.jpg')*/
+}
+
+html{
+    position:relative;
+    min-height:100%;
+}
+
+.pg{
+    margin-bottom:100px;
 }
 
 footer {
@@ -11,7 +22,7 @@ footer {
     padding: 5px 5px 5px 5px;
     background-color: black;
     height:30px;
-    position: fixed;
+    position: absolute;
     bottom: 0;
 }
 
@@ -58,13 +69,21 @@ footer {
     padding-top: 2px;
 }
 
+.glyphicon.glyphicon-th-list{
+    height: 80px;
+}
+
+.btn.btn-primary{
+    margin-left: -3px;
+    height: 45px;
+}
+
 .input-group{
   width: 900px;
   height: 45px;
   margin: 0 auto;
   margin-bottom: 20px;
 }
-
 
 #cards{
   text-align: center;
@@ -74,12 +93,19 @@ footer {
   margin-left: 280px;
 }
 
+.card.card-body {
+    height: 90px;
+    margin-top: 2px;
+    margin-bottom:2px;
+}
+
 .card{
   text-align: center;
   width: 530px;
   display: inline-block;
   height: 45px;
-  margin-bottom: 10px;
+  margin-bottom: 0px;
+  margin-top: 0px;
   margin-left: 200px;
 }
 
