--- a/templates/bucketList.html
+++ b/templates/bucketList.html
@@ -14,14 +14,24 @@
 </head>
 
 <body>
-    {%for i in range(0, c)%}
+    <div class="bookmarks">
+    {% if url == [] %}
+            <div class="card" id="cards">
+                <div class="card-body" id="bList">
+                    <span>No Bookmarks Found</span>
+                </div>
+            </div>
+    {% else %}
+        {%for i in range(0, c)%}
             <div class="card" id="cards">
                 <div class="card-body" id="bList">
                     <a id="linkss" href={{bl[i]}} target="_blank"><span>{{ url[i] }}</span></a>
                 </div>
             </div>
-            
-    {%endfor%}
+        {%endfor%}
+    {% endif %}
+    </div>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     
